<resources>
    <string name="app_name">Story App</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Lets share your story here in Story App</string>
    <string name="title_welcome_page">Welcome to Story App!</string>
    <string name="title_signup_page">Fill in your data below to register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Sign in to your account</string>
    <string name="title_login_page">Ready to share your stories?</string>
    <string name="name">Name</string>
    <string name="login_image">Login Image</string>
    <string name="input_your_email">Input Your Email</string>
    <string name="register_image">Register Image</string>
    <string name="input_your_password">Input Your Password</string>
    <string name="input_your_name">Input Your Name</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="error_email_invalid">Invalid email format</string>
    <string name="error_password_invalid">Password must be at least 8 characters</string>
    <string name="story_image">Story Image</string>
    <string name="add_a_new_story">Add a New Story</string>
    <string name="name_of_the_user">Name of the User</string>
    <string name="username">Username :</string>
    <string name="description">Description :</string>
    <string name="description_of_the_story">Description of the Story</string>
    <string name="logout">Logout</string>
    <string name="image_to_upload">Image to Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="image_null_error">No Image Detected, Pick an Image First</string>
    <string name="add_story">Add Story</string>
    <string name="selected_image_uri">Selected Image Uri: %1$s</string>
    <string name="no_image_selected">No Image Selected</string>
    <string name="photo_picker">Photo Picker</string>
    <string name="image_file">Image File</string>
    <string name="showimage">showImage: %1$s</string>
    <string name="upload_error">Upload Error</string>
    <string name="ok">OK</string>
    <string name="success">Success</string>
    <string name="upload_success">Upload Success</string>
    <string name="failed">Failed</string>
    <string name="retry">Retry</string>
    <string name="story_detail">Story Detail</string>
    <string name="error_occurred">Error Occurred: %1$s</string>
    <string name="dismiss">Dismiss</string>
    <string name="login_success">Login Success</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty">Empty</string>
    <string name="widget_image">Widget Image</string>
    <string name="refresh">Refresh</string>
    <string name="change_language">Change Language</string>
    <string name="title_activity_story_maps" translatable="false">StoryMapsActivity</string>
    <string name="map">Map</string>
    <string name="add_location_optional">Add Location (Optional)</string>
    <string name="latitude" translatable="false">Latitude :</string>
    <string name="longitude" translatable="false">Longitude :</string>
</resources>