<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        card_view:layout_constraintTop_toBottomOf="@+id/iv_item_photo">

        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/story_image"
            android:scaleType="fitCenter"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/username"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="2"
            android:background="@drawable/widget_background"
            android:padding="4dp"
            android:text="@string/name_of_the_user"
            android:transitionName="storyName" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/description"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="2"
            android:background="@drawable/widget_background"
            android:padding="4dp"
            android:text="@string/description_of_the_story"
            android:transitionName="storyDescription" />
    </LinearLayout>
</androidx.cardview.widget.CardView>