<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.add.AddStoryActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/iv_story_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/image_to_upload"
        android:src="@drawable/ic_place_holder"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_camera" />
    <Button
        android:id="@+id/btn_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:layout_margin="4dp"
        app:layout_constraintBottom_toTopOf="@+id/til_description"
        app:layout_constraintStart_toStartOf="@+id/til_description"
        app:layout_constraintEnd_toStartOf="@+id/btn_gallery"/>
    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:layout_margin="4dp"
        app:layout_constraintBottom_toTopOf="@+id/til_description"
        app:layout_constraintEnd_toEndOf="@+id/til_description"
        app:layout_constraintStart_toEndOf="@+id/btn_camera"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_margin="12dp"
        app:layout_constraintBottom_toTopOf="@+id/button_add">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/description"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/button_add"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>